<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_pet_name"
                android:hint="@string/hint_pet_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_pet_breed"
                android:hint="@string/hint_pet_breed"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_gender"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_measurement"
            style="@style/CategoryStyle" />

        <!-- Input fields -->

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_pet_weight"
                android:hint="@string/hint_pet_weight"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_pet_weight"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_pet_height"
                    android:hint="@string/hint_pet_height"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_height_units"
                    android:text="@string/unit_pet_height"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_tiem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Lịch Tiêm Chủng"
            style="@style/CategoryStyle" />

        <!-- Input fields -->

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText

                    android:hint="Ngày Tiêm Gần Nhất"
                    android:inputType="date"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView

                    android:text="2020"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <EditText

                android:hint="Loại Vaccine"
                android:inputType="text"
                style="@style/EditorFieldStyle" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText

                    android:hint="Lịch Tiêm Sắp Tới"
                    android:inputType="date"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView

                    android:text="2020"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Email Phụ Huynh"
            style="@style/CategoryStyle" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="  ...@gmail.com"
            android:inputType="textEmailAddress"
            style="@style/EditorFieldStyle"
            android:paddingLeft="4dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:onClick="sendEmail"
        android:text="Nhắc Nhở Lịch Tiêm" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="bmi"
            android:text="Tính BMI" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="186dp"
        app:srcCompat="@drawable/bmi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bmi"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


</LinearLayout>
