<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorMomActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_mom_name"
                android:hint="@string/hint_pet_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_mom_breed"
                android:hint="@string/hint_pet_breed"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_mom_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Giới Tính Thai Nhi"

            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_mom_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_mom_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Thông Tin Mẹ"
            style="@style/CategoryStyle" />

        <!-- Input fields -->

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_mom_weight"
                    android:hint="Số Điện Thoại"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_weight_units"
                    android:text="Sđt"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_mom_height"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_height_units"
                    android:text="Email"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <EditText
                android:hint="Địa Chỉ"
                android:inputType="text"
                style="@style/EditorFieldStyle" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_mom_weight2"
                    android:hint="Cân Nặng"
                    android:inputType="text"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView

                    android:text="kg"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_mom_thaiky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Thông Tin
             Thai Kỳ"
            style="@style/CategoryStyle" />

        <!-- Input fields -->

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_mom_thaiKy"
                    android:hint="Số Tuần Tuổi"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView

                    android:text="Tuần"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_mom_ngayTiem"
                    android:hint="Ngày Tiêm Gần Nhất"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView

                    android:text="2020"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Lịch Thăm Khám
                Siêu Âm"
            style="@style/CategoryStyle" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="  Ngày/Tháng/Năm"
            android:inputType="date"
            style="@style/EditorFieldStyle"
            android:paddingLeft="4dp"/>


    </LinearLayout>

    <Button
        android:id="@+id/email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendEmail"
        android:text="Hẹn Lịch Thăm Khám" />
</LinearLayout>
